--- a/1-cluster-scope/cpd-platform-cluster.yaml
+++ b/1-cluster-scope/cpd-platform-cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cpd-platform-cluster-${appSuffix}
-  namespace: ${argocdNS}
+  name: cpd-platform-cluster-gitops
+  namespace: openshift-gitops
   labels:
     scope: cluster
     product: software-hub
@@ -13,13 +13,13 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: ${helmRepoURL}
-    targetRevision: ${cpd-platform-cluster-version}
-    chart: ${cpd-platform-cluster-chart}
+    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+    targetRevision: 5.3.0+20251122.143747.124
+    chart: cpd-platform-cluster-scoped
     helm:
       valuesObject:
         global:
-          operatorNamespace: ${operatorNS}
+          operatorNamespace: gitops-operator
   project: default
   syncPolicy:
     automated:
