--- a/1-cluster-scope/cs-cluster.yaml
+++ b/1-cluster-scope/cs-cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cs-cluster-${appSuffix}
-  namespace: ${argocdNS}
+  name: cs-cluster-gitops
+  namespace: openshift-gitops
   labels:
     scope: cluster
     product: software-hub
@@ -12,13 +12,13 @@ spec:
     namespace: default
     server: https://kubernetes.default.svc
   source:
-    repoURL: ${helmRepoURL}
-    chart: ${cs-cluster-chart}
-    targetRevision: ${cs-cluster-version}
+    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+    chart: ibm-common-service-operator-cluster-scoped
+    targetRevision: 4.16.0+20251107.123839.0
     helm:
       valuesObject:
         global:
-          operatorNamespace: ${operatorNS}
+          operatorNamespace: gitops-operator
   project: default
   syncPolicy:
     automated:
