--- a/1-cluster-scope/im-cluster.yaml
+++ b/1-cluster-scope/im-cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: im-cluster-${appSuffix}
-  namespace: ${argocdNS}
+  name: im-cluster-gitops
+  namespace: openshift-gitops
   labels:
     scope: cluster
     product: software-hub
@@ -12,13 +12,13 @@ spec:
     namespace: default
     server: https://kubernetes.default.svc
   source:
-    repoURL: ${helmRepoURL}
-    targetRevision: ${im-cluster-version}
-    chart: ${im-cluster-chart}
+    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+    targetRevision: 4.15.0+20251111.110850.0
+    chart: ibm-iam-operator-cluster-scoped
     helm:
       valuesObject:
         global:
-          operatorNamespace: ${operatorNS}
+          operatorNamespace: gitops-operator
   project: default
   syncPolicy:
     automated:
