--- a/3-cartridge/planning-analytics/planning-analytics-cluster.yaml
+++ b/3-cartridge/planning-analytics/planning-analytics-cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: planning-analytics-cluster-${appSuffix}
-  namespace: ${argocdNS}
+  name: planning-analytics-cluster-gitops
+  namespace: openshift-gitops
   labels:
     scope: cluster
     product: planning-analytics
@@ -13,13 +13,13 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: ${helmRepoURL}
+    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
     targetRevision: ${planning-analytics-cluster-version}
     chart: ${planning-analytics-cluster-chart}
     helm:
       valuesObject:
         global:
-          operatorNamespace: ${operatorNS}
+          operatorNamespace: gitops-operator
   project: default
   syncPolicy:
     automated:
