--- a/1-cluster-scope/zen-cluster.yaml
+++ b/1-cluster-scope/zen-cluster.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
     targetRevision: 6.3.0+20251122.162557.333
     chart: zen-cluster-scoped
     helm:
