--- a/2-namespace-scope/cpd-platform.yaml
+++ b/2-namespace-scope/cpd-platform.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
     targetRevision: 5.3.0+20251122.143747.124
     chart: cpd-platform
     helm:
