--- a/2-namespace-scope/cs.yaml
+++ b/2-namespace-scope/cs.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
     targetRevision: 4.16.0+20251107.123839.0
     chart: ibm-common-service-operator
     helm:
