--- a/values.yaml
+++ b/values.yaml
@@ -11,7 +11,7 @@ global:
   imagePullPrefix: icr.io
   imagePullSecret: ibm-entitlement-key
   argocdNS: openshift-gitops
-  helmRepoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530/repos
+  helmRepoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
   installConfigImageDigest: "sha256:f97f1b364a27acfe08b1c80d9ce91c25f07e6005a7ba821abf164c8e38925a04"
 
   cpd-platform-cluster:
