--- a/2-namespace-scope/kustomization.yaml
+++ b/2-namespace-scope/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   # - platform-config.yaml
   - postgresql.yaml
   - zen.yaml
-  # - rh-cm.yaml
+  - rh-cm.yaml
   # - post-installation.yaml
