--- a/3-cartridge/opensearch-cluster.yaml
+++ b/3-cartridge/opensearch-cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: opensearch-cluster-${appSuffix}
-  namespace: ${argocdNS}
+  name: opensearch-cluster-gitops
+  namespace: openshift-gitops
   labels:
     scope: cluster
     product: software-hub
@@ -13,13 +13,13 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: ${helmRepoURL}
-    targetRevision: ${opensearch-cluster-version}
-    chart: ${opensearch-cluster-chart}
+    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
+    targetRevision: 1.1.4009+20250905.120936
+    chart: opencontent-opensearch-cluster-scoped
     helm:
       valuesObject:
         global:
-          operatorNamespace: ${operatorNS}
+          operatorNamespace: gitops-operator
   project: default
   syncPolicy:
     automated:
