--- a/3-cartridge/watsonx-ai-ifm-cluster.yaml
+++ b/3-cartridge/watsonx-ai-ifm-cluster.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: watsonx-ai-ifm-cluster-${appSuffix}
-  namespace: ${argocdNS}
+  name: watsonx-ai-ifm-cluster-gitops
+  namespace: openshift-gitops
   labels:
     scope: cluster
     product: software-hub
@@ -13,13 +13,13 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: ${helmRepoURL}
-    targetRevision: ${watsonx-ai-ifm-cluster-version}
-    chart: ${watsonx-ai-ifm-cluster-chart}
+    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
+    targetRevision: 12.0.0+20251126.133633.241
+    chart: watsonx-ai-ifm-cluster-scoped
     helm:
       valuesObject:
         global:
-          operatorNamespace: ${operatorNS}
+          operatorNamespace: gitops-operator
   project: default
   syncPolicy:
     automated:
