--- a/2-namespace-scope/cs.yaml
+++ b/2-namespace-scope/cs.yaml
@@ -27,6 +27,7 @@ spec:
           fileStorageClass: ocs-external-storagecluster-cephfs
           imagePullPrefix: icr.io
           imagePullSecret: ibm-entitlement-key
+          scaleConfig: "small"
   project: default
   syncPolicy:
     automated:
