--- a/3-cartridge/wml.yaml
+++ b/3-cartridge/wml.yaml
@@ -32,6 +32,7 @@ spec:
           fileStorageClass: ocs-external-storagecluster-cephfs
           imagePullPrefix: icr.io
           imagePullSecret: ibm-entitlement-key
+        wml:
           scaleConfig: "small"
   project: default
   syncPolicy:
