update wml config

--- a/3-cartridge/wml.yaml
+++ b/3-cartridge/wml.yaml
@@ -33,7 +33,7 @@ spec:
           imagePullPrefix: icr.io
           imagePullSecret: ibm-entitlement-key
         wml:
-          scaleConfig: "small"
+          deployCR: false
   project: default
   syncPolicy:
     automated:
