update ws config

--- a/3-cartridge/ws.yaml
+++ b/3-cartridge/ws.yaml
@@ -33,6 +33,8 @@ spec:
           imagePullPrefix: icr.io
           imagePullSecret: ibm-entitlement-key
           scaleConfig: "small"
+        ws:
+          scaleConfig: "small"
   project: default
   syncPolicy:
     automated:
