rename ibm licensing

--- a/2-namespace-scope/ibm-licensing.yaml
+++ b/2-namespace-scope/ibm-licensing.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ibm-license-gitops
+  name: ibm-licensing-gitops
   namespace: openshift-gitops
   labels:
     scope: namespace
