--- a/0-bootstrap/entitlement.tmpl.yaml
+++ b/0-bootstrap/entitlement.tmpl.yaml
@@ -21,7 +21,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ibm-entitlement-key
-  namespace: gitops-licensing
+  namespace: ibm-licensing
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: ${dockerconfigjson_b64}
