--- a/0-bootstrap/rbac.yaml
+++ b/0-bootstrap/rbac.yaml
@@ -30,7 +30,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: argocd-application-controller-admin
-  namespace: gitops-licensing
+  namespace: ibm-licensing
 subjects:
   - kind: ServiceAccount
     name: openshift-gitops-argocd-application-controller
