change config:wml deployCR

--- a/3-cartridge/wml.yaml
+++ b/3-cartridge/wml.yaml
@@ -33,7 +33,7 @@ spec:
           imagePullPrefix: icr.io
           imagePullSecret: ibm-entitlement-key
         wml:
-          deployCR: false
+          deployCR: true
   project: default
   syncPolicy:
     automated:
