--- a/3-cartridge/wml.yaml
+++ b/3-cartridge/wml.yaml
@@ -34,6 +34,7 @@ spec:
           imagePullSecret: ibm-entitlement-key
         wml:
           deployCR: true
+          scaleConfig: "small"
   project: default
   syncPolicy:
     automated:
