enable redis-cp

--- a/3-cartridge/kustomization.yaml
+++ b/3-cartridge/kustomization.yaml
@@ -15,5 +15,5 @@ resources:
   - ws-runtimes.yaml
   - ws-cluster.yaml
   - ws.yaml
-  # - redis-cp-cluster.yaml
-  # - redis-cp.yaml
+  - redis-cp-cluster.yaml
+  - redis-cp.yaml
