--- a/3-cartridge/redis-cp-cluster.yaml
+++ b/3-cartridge/redis-cp-cluster.yaml
@@ -13,7 +13,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: ''
-    repoURL: ibm-redis-cp-cluster-scoped
+    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
     targetRevision: 1.3.0+20251030.042031.105
     chart: ibm-redis-cp-cluster-scoped
     helm:
