change back to default value of IBM licensing

--- a/2-namespace-scope/ibm-licensing.yaml
+++ b/2-namespace-scope/ibm-licensing.yaml
@@ -24,7 +24,7 @@ spec:
     chart: ibm-license-service
     helm:
       valuesObject:
-        namespace: gitops-operator
+        namespace: gitops-instance
         watchNamespace: gitops-instance
         global:
           imagePullPrefix: icr.io
