--- a/2-namespace-scope/kustomization.yaml
+++ b/2-namespace-scope/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - postgresql.yaml
   - zen.yaml
   - rh-cm.yaml
-  - ibm-licensing.yaml
+  # - ibm-licensing.yaml
   - post-installation.yaml
