--- a/1-cluster-scope/ibm-licensing-cluster.yaml
+++ b/1-cluster-scope/ibm-licensing-cluster.yaml
@@ -25,10 +25,9 @@ spec:
         # ibmLicensing:
         #   namespace: ibm-licensing
         #   watchNamespace: ibm-licensing,gitops-operator,gitops-instance
-        namespace: gitops-instance
-        watchNamespace: gitops-operator,gitops-instance
-        # namespace: ibm-licensing
-        # watchNamespace: ibm-licensing,gitops-operator,gitops-instance
+        ibmLicensing:
+          namespace: gitops-instance
+          watchNamespace: gitops-operator,gitops-instance
   project: default
   syncPolicy:
     automated:
