--- a/3-cartridge/kustomization.yaml
+++ b/3-cartridge/kustomization.yaml
@@ -29,7 +29,7 @@ resources:
   - ws-runtimes-cluster.yaml
   - ws-runtimes.yaml
   - ws.yaml
-  # - ibm-events-operator.yaml
+  - ibm-events-operator.yaml
   - data-governor-app.yaml
   - data-governor-cluster-app.yaml
   - ibm-namespace-scope-operator-app.yaml
