--- a/3-cartridge/ibm-events-operator.yaml
+++ b/3-cartridge/ibm-events-operator.yaml
@@ -25,8 +25,9 @@ spec:
     helm:
       valuesObject:
         watchNamespaces: [gitops-operator,gitops-instance]
-        image:
-          tag: "0.44.0"
+        kafka:
+          image:
+            name: "kafka:latest-kafka-4.1.1,3.7.0=quay.io/strimzi/kafka:latest-kafka-3.7.0,3.8.0=quay.io/strimzi/kafka:latest-kafka-3.8.0"
   project: default
   syncPolicy:
     automated:
