--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -2,6 +2,7 @@ resources:
   - 1-cluster-scope
   - 2-namespace-scope
   - 3-cartridge
+  - 99-olm
   ## Cartridges to be enable/disable
   # - 3-cartridge/planning-analytics
   # - 3-cartridge/openpages
