--- a/2-namespace-scope/olm.yaml
+++ b/2-namespace-scope/olm.yaml
@@ -1,24 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cs-cluster-gitops
+  name: post-installation-gitops
   namespace: openshift-gitops
   labels:
-    scope: cluster
+    scope: namespace
     product: software-hub
 spec:
   destination:
-    name: ''
-    namespace: default
+    namespace: gitops-instance
     server: https://kubernetes.default.svc
   source:
-    repoURL: https://howard-luo.github.io/non-olm-cp4d-gitops-530/repos
-    chart: ibm-common-service-operator-cluster-scoped
-    targetRevision: 4.16.0+20251202.184832.0
-    helm:
-      valuesObject:
-        global:
-          operatorNamespace: gitops-operator
+    repoURL: https://github.com/Howard-Luo/non-olm-cp4d-gitops-530.git
+    targetRevision: main
+    path: 8-olm
+    kustomize: {}
   project: default
   syncPolicy:
     automated:
