--- a/2-namespace-scope/kustomization.yaml
+++ b/2-namespace-scope/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
   - cpd-platform.yaml
   - cs.yaml
   - im.yaml
-  # - platform-config.yaml
+  - platform-config.yaml
   - postgresql.yaml
   - zen.yaml
   # - rh-cm.yaml
