--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
   - 1-cluster-scope
   - 2-namespace-scope
-  - 3-cartridge
+  # - 3-cartridge
   - 99-olm
   ## Cartridges to be enable/disable
   # - 3-cartridge/planning-analytics
