--- a/3-cartridge/kustomization.yaml
+++ b/3-cartridge/kustomization.yaml
@@ -42,5 +42,5 @@ resources:
   - watson-gateway-cluster-app.yaml
   - watsonx-data-app.yaml
   - watsonx-data-cluster-app.yaml
-  # - watsonx-orchestrate-app.yaml
-  # - watsonx-orchestrate-cluster-app.yaml
+  - watsonx-orchestrate-app.yaml
+  - watsonx-orchestrate-cluster-app.yaml
